DAQ-4412 Checking the cmd queue is not empty before getting element zero
Change-Id: Ibe19379ea24039b2234c4029f007d0e4689d11df